Mon Feb  8 20:28:07 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/ma_menu: Change relative URLs to absolute URLs to
	www.htdig.org to reflect the changing mail archive.

	* htdoc/install.html: Add notes on new configure flags to set
	CONFIG variables.

	* htdoc/*.html: Ensure Last Modifed date stamps are up-to-date.

Mon Feb  8 20:26:40 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdoc/meta.html, htdoc/notification.html: Add info on date
	formats for the htnotify-date tag, esp. in relation to ISO 8601.

Sat Feb  6 23:24:19 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.cc: Fixed compile problem when zlib is disabled.

	* htdoc/cf_byname, htdoc/cf_byprog.html, htdoc/attrs.html: Added
	entries for url_log, compression_level, noindex_start, noindex_end,
	allow_in_form, bad_querystr, no_title_text.

	* htdoc/THANKS.cc: Added Gabriele Bartolini.

	* htdoc/uses.html, htdoc/FAQ.html, htdoc/bugs.html: Synch with the
	latest versions from the website tree.
	
Fri Feb  5 19:57:39 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htnotify/htnotify.cc: Add function parse_date() to parse date
	strings from htnotify-date tags. It tries to be as flexible as
	possible about formatting and will report invalid dates. Based in
	part from code contributed by Gabriele Bartolini.

Fri Feb  5 19:28:24 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure, configure.in: Add a test to ensure the zlib.h header
	file exists.

	* include/htconfig.h.in: Added definition for HAVE_ZLIB_H.

	* htcommon/DocumentRef.h, htcommon/DocumentRef.cc: Add checks for
	HAVE_ZLIB_H in addition to HAVE_LIBZ. Ensures the library is
	actually accessible, not just present.

	* htfuzzy/Soundex.cc: Fix typo.

Thu Feb  4 22:51:37 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* Makefile.in: Clean up previous patch and tidy up HTML and
	dictionary installation.

Thu Feb  4 22:31:35 1999  Ric Klaren <klaren@telin.nl>
