@@ -17,8 +17,8 @@
     <hr noshade size="4">
     <p>
       The current release is <a href=
-      "http://www.htdig.org/files/htdig-3.1.0b4.tar.gz">
-      htdig-3.1.0b4.tar.gz</a>. Note that this is a gzipped tar file.
+      "http://www.htdig.org/files/htdig-3.1.0.tar.gz">
+      htdig-3.1.0.tar.gz</a>. Note that this is a gzipped tar file.
       You will need the GNU gunzip program to extract the files in
       the archive. You can get the latest version of any of the GNU
       tools from <a href="ftp://ftp.gnu.org/pub/gnu/">
@@ -40,7 +40,7 @@
       &lt;andrew@contigo.com&gt;</a>
     </address>
     <!-- hhmts start -->
-Last modified: Mon Jan 25 15:19:58 EST 1999
+Last modified: Mon Feb  8 20:47:40 EST 1999
 <!-- hhmts end -->  
   </body>
 </html>
