@@ -1,3 +1,15 @@
+Tue Feb  9 19:21:55 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htdoc/FAQ.html, htdoc/where.html: Update for 3.1.0 release.
+
+	* htdoc/uses.html: Added remaining backlog.
+
+	* htdoc/RELEASE.html: Finish up release notes for 3.1.0.
+
+Tue Feb  9 19:19:13 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>
+
+	* htdig/ExternalParser.cc: Ensure we remove the temporary file.
+
 Mon Feb  8 20:28:07 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htdoc/ma_menu: Change relative URLs to absolute URLs to
